--- a/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
+++ b/SurRound/View/Post+Story/NewPost/Base.lproj/NewPost.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oq9-h5-PCl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Oq9-h5-PCl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -67,12 +67,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="SC8-eG-lqi"/>
                     <connections>
+                        <outlet property="btnsCollectionView" destination="3wH-5s-8AT" id="t2A-8f-mA5"/>
                         <outlet property="popUpView" destination="0Ju-eX-Dlf" id="mey-CY-bOO"/>
-                        <outletCollection property="categoryButtons" destination="gXN-4z-LMo" collectionClass="NSMutableArray" id="GEu-lt-QZE"/>
-                        <outletCollection property="categoryButtons" destination="Fs5-WA-ufh" collectionClass="NSMutableArray" id="roh-FX-vIj"/>
-                        <outletCollection property="categoryButtons" destination="VLF-c4-n3M" collectionClass="NSMutableArray" id="UxL-BL-i5J"/>
-                        <outletCollection property="categoryButtons" destination="pOu-lh-Zo9" collectionClass="NSMutableArray" id="exJ-Yh-F8j"/>
-                        <outletCollection property="categoryButtons" destination="zlN-gE-7Lw" collectionClass="NSMutableArray" id="45a-Of-K3M"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="syi-EW-DlI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -80,83 +76,23 @@
                     <rect key="frame" x="0.0" y="0.0" width="413" height="250"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="HID-bm-Ghd">
-                            <rect key="frame" x="59.5" y="80" width="294" height="24"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gXN-4z-LMo" customClass="SRVerticalAlignedButton" customModule="SurRound" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="94" height="24"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <state key="normal" title="Food" image="Icons_24px_Add"/>
-                                    <connections>
-                                        <action selector="didTapCategoryBtn:" destination="yi0-qu-b79" eventType="touchUpInside" id="6ba-jH-fdt"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fs5-WA-ufh" customClass="SRVerticalAlignedButton" customModule="SurRound" customModuleProvider="target">
-                                    <rect key="frame" x="100" y="0.0" width="94" height="24"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <state key="normal" title="Scenary" image="Icons_24px_Add"/>
-                                    <connections>
-                                        <action selector="didTapCategoryBtn:" destination="yi0-qu-b79" eventType="touchUpInside" id="qfq-Fz-dDv"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLF-c4-n3M" customClass="SRVerticalAlignedButton" customModule="SurRound" customModuleProvider="target">
-                                    <rect key="frame" x="200" y="0.0" width="94" height="24"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <state key="normal" title="Shopping" image="Icons_24px_Add"/>
-                                    <connections>
-                                        <action selector="didTapCategoryBtn:" destination="yi0-qu-b79" eventType="touchUpInside" id="LAb-v7-1q7"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                        </stackView>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="b4Q-kQ-QLb">
-                            <rect key="frame" x="24.5" y="152" width="364" height="24"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pOu-lh-Zo9" customClass="SRVerticalAlignedButton" customModule="SurRound" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="179" height="24"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <state key="normal" title="Chat" image="Icons_24px_Add"/>
-                                    <connections>
-                                        <action selector="didTapCategoryBtn:" destination="yi0-qu-b79" eventType="touchUpInside" id="AAq-ex-chP"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="zlN-gE-7Lw" customClass="SRVerticalAlignedButton" customModule="SurRound" customModuleProvider="target">
-                                    <rect key="frame" x="185" y="0.0" width="179" height="24"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <state key="normal" title="Question" image="Icons_24px_Add"/>
-                                    <connections>
-                                        <action selector="didTapCategoryBtn:" destination="yi0-qu-b79" eventType="touchUpInside" id="Gof-ps-taj"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <viewLayoutGuide key="safeArea" id="S1e-PH-BSl"/>
-                        </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gen-Jk-KcX">
-                            <rect key="frame" x="184" y="177" width="45" height="33"/>
-                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                            <state key="normal" title="Close">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </state>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3wH-5s-8AT">
+                            <rect key="frame" x="20" y="17" width="373" height="213"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cNj-M4-WXR">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                            <cells/>
                             <connections>
-                                <action selector="didTapCloseBtn:" destination="yi0-qu-b79" eventType="touchUpInside" id="cqa-F0-Q5f"/>
+                                <outlet property="dataSource" destination="yi0-qu-b79" id="kUh-NE-Gl6"/>
+                                <outlet property="delegate" destination="yi0-qu-b79" id="ady-VN-C3R"/>
                             </connections>
-                        </button>
+                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" red="0.54740279213387344" green="0.60929281799807822" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstItem="HID-bm-Ghd" firstAttribute="centerX" secondItem="0Ju-eX-Dlf" secondAttribute="centerX" id="OUr-TX-3M9"/>
-                        <constraint firstItem="HID-bm-Ghd" firstAttribute="top" secondItem="D66-Gt-45K" secondAttribute="top" constant="36" id="Oyg-4P-841"/>
-                        <constraint firstItem="Gen-Jk-KcX" firstAttribute="centerX" secondItem="0Ju-eX-Dlf" secondAttribute="centerX" id="eng-ZG-kgZ"/>
-                        <constraint firstAttribute="bottom" secondItem="Gen-Jk-KcX" secondAttribute="bottom" constant="40" id="hXL-Zh-YpQ"/>
-                        <constraint firstItem="b4Q-kQ-QLb" firstAttribute="top" secondItem="HID-bm-Ghd" secondAttribute="bottom" constant="48" id="nvK-SR-Ngd"/>
-                        <constraint firstItem="b4Q-kQ-QLb" firstAttribute="centerX" secondItem="0Ju-eX-Dlf" secondAttribute="centerX" id="swJ-Iq-c4U"/>
-                    </constraints>
                     <viewLayoutGuide key="safeArea" id="D66-Gt-45K"/>
                 </view>
             </objects>
@@ -255,8 +191,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Icons_24px_Add" width="24" height="24"/>
         <image name="Icons_MapLocationPin" width="32" height="32"/>
-        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
     </resources>
 </document>
