--- a/SurRound/View/Profile/Base.lproj/Profile.storyboard
+++ b/SurRound/View/Profile/Base.lproj/Profile.storyboard
@@ -15,75 +15,102 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AiL-xM-Yqn">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="AiL-xM-Yqn">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="y53-h9-qyE" id="Tfp-l0-tiT"/>
+                                    <outlet property="delegate" destination="y53-h9-qyE" id="bdr-aT-MUk"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" id="vE3-qb-kVw" customClass="ProfileHeaderView" customModule="SurRound" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="414" height="275"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="207"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="cqA-s0-QkO">
-                                        <rect key="frame" x="157" y="61" width="100" height="100"/>
+                                        <rect key="frame" x="24" y="52.5" width="80" height="80"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="UtN-9E-inb"/>
-                                            <constraint firstAttribute="width" secondItem="cqA-s0-QkO" secondAttribute="height" multiplier="1:1" id="qm3-8c-BgY"/>
+                                            <constraint firstAttribute="width" secondItem="cqA-s0-QkO" secondAttribute="height" id="QEE-tO-HjH"/>
+                                            <constraint firstAttribute="height" constant="80" id="Tjq-sA-Vr4"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gAW-eN-JLZ">
-                                        <rect key="frame" x="167.5" y="24" width="79" height="21"/>
+                                        <rect key="frame" x="25" y="24" width="78.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posts" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tty-4b-mCI">
-                                        <rect key="frame" x="67.5" y="201" width="43" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjk-W9-YTp">
-                                        <rect key="frame" x="283.5" y="201" width="73" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5On-6h-oa1">
-                                        <rect key="frame" x="170.5" y="201" width="73" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="21M-oF-47K" customClass="SelectionView" customModule="SurRound" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="167" width="414" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="EeI-5o-HBx"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qIV-Bi-l7l">
+                                        <rect key="frame" x="82" y="102.5" width="30" height="30"/>
+                                        <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="qIV-Bi-l7l" secondAttribute="height" multiplier="1:1" id="8jo-xF-fYL"/>
+                                            <constraint firstAttribute="width" constant="30" id="o4g-vd-5xE"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
+                                        <state key="normal" title="+">
+                                            <color key="titleColor" red="0.89019607840000003" green="0.96470588239999999" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="W3a-9x-hiw">
+                                        <rect key="frame" x="128" y="82.5" width="270" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Posts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tty-4b-mCI">
+                                                <rect key="frame" x="0.0" y="0.0" width="56.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Following" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5On-6h-oa1">
+                                                <rect key="frame" x="64.5" y="0.0" width="96" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjk-W9-YTp">
+                                                <rect key="frame" x="168.5" y="0.0" width="101.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="cqA-s0-QkO" firstAttribute="centerX" secondItem="vE3-qb-kVw" secondAttribute="centerX" id="BVk-RA-IUy"/>
-                                    <constraint firstItem="Fjk-W9-YTp" firstAttribute="centerY" secondItem="5On-6h-oa1" secondAttribute="centerY" id="Kt6-1N-hcg"/>
-                                    <constraint firstItem="5On-6h-oa1" firstAttribute="leading" secondItem="tty-4b-mCI" secondAttribute="trailing" constant="60" id="NfE-mm-CRI"/>
-                                    <constraint firstItem="cqA-s0-QkO" firstAttribute="top" secondItem="gAW-eN-JLZ" secondAttribute="bottom" constant="16" id="Swo-9q-jbu"/>
-                                    <constraint firstItem="gAW-eN-JLZ" firstAttribute="centerX" secondItem="cqA-s0-QkO" secondAttribute="centerX" id="WTo-Lv-c4B"/>
-                                    <constraint firstItem="tty-4b-mCI" firstAttribute="centerY" secondItem="5On-6h-oa1" secondAttribute="centerY" id="Z8v-Aq-c6f"/>
-                                    <constraint firstItem="gAW-eN-JLZ" firstAttribute="top" secondItem="vE3-qb-kVw" secondAttribute="top" constant="24" id="bpW-p5-Gja"/>
-                                    <constraint firstItem="Fjk-W9-YTp" firstAttribute="leading" secondItem="5On-6h-oa1" secondAttribute="trailing" constant="40" id="cZE-ZP-64Q"/>
-                                    <constraint firstItem="5On-6h-oa1" firstAttribute="top" secondItem="cqA-s0-QkO" secondAttribute="bottom" constant="40" id="nhM-qb-OjQ"/>
-                                    <constraint firstItem="5On-6h-oa1" firstAttribute="centerX" secondItem="cqA-s0-QkO" secondAttribute="centerX" id="rDn-bm-vbi"/>
+                                    <constraint firstItem="W3a-9x-hiw" firstAttribute="leading" secondItem="cqA-s0-QkO" secondAttribute="trailing" constant="24" id="5tQ-8H-Coq"/>
+                                    <constraint firstItem="cqA-s0-QkO" firstAttribute="top" secondItem="gAW-eN-JLZ" secondAttribute="bottom" constant="8" id="P6p-09-nCk"/>
+                                    <constraint firstAttribute="bottom" secondItem="21M-oF-47K" secondAttribute="bottom" id="PGF-Iz-r8f"/>
+                                    <constraint firstItem="qIV-Bi-l7l" firstAttribute="bottom" secondItem="cqA-s0-QkO" secondAttribute="bottom" id="TyC-fN-k4i"/>
+                                    <constraint firstItem="gAW-eN-JLZ" firstAttribute="centerX" secondItem="cqA-s0-QkO" secondAttribute="centerX" id="azI-DV-PEu"/>
+                                    <constraint firstAttribute="trailing" secondItem="W3a-9x-hiw" secondAttribute="trailing" constant="16" id="cM2-i5-RZA"/>
+                                    <constraint firstItem="gAW-eN-JLZ" firstAttribute="top" secondItem="vE3-qb-kVw" secondAttribute="top" constant="24" id="cUH-IN-9pB"/>
+                                    <constraint firstItem="21M-oF-47K" firstAttribute="leading" secondItem="vE3-qb-kVw" secondAttribute="leading" id="fPQ-Pz-QOI"/>
+                                    <constraint firstItem="W3a-9x-hiw" firstAttribute="centerY" secondItem="cqA-s0-QkO" secondAttribute="centerY" id="fpf-zI-hXe"/>
+                                    <constraint firstItem="qIV-Bi-l7l" firstAttribute="trailing" secondItem="cqA-s0-QkO" secondAttribute="trailing" constant="8" id="j9t-tB-5Jd"/>
+                                    <constraint firstItem="21M-oF-47K" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cqA-s0-QkO" secondAttribute="bottom" constant="8" id="tsa-gH-bAb"/>
+                                    <constraint firstAttribute="trailing" secondItem="21M-oF-47K" secondAttribute="trailing" id="wc4-mE-Bge"/>
+                                    <constraint firstItem="cqA-s0-QkO" firstAttribute="leading" secondItem="vE3-qb-kVw" secondAttribute="leading" constant="24" id="zmr-2c-Xle"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="followerCountLabel" destination="Fjk-W9-YTp" id="7MK-Rj-aiC"/>
-                                    <outlet property="followingCountLabel" destination="5On-6h-oa1" id="sza-lN-imc"/>
-                                    <outlet property="postCountLabel" destination="tty-4b-mCI" id="hLy-82-1nD"/>
-                                    <outlet property="profileImageView" destination="cqA-s0-QkO" id="qBG-Hv-dAO"/>
-                                    <outlet property="usernameLabel" destination="gAW-eN-JLZ" id="djI-Sq-GMx"/>
+                                    <outlet property="editAvatarButton" destination="qIV-Bi-l7l" id="gxR-nG-ckF"/>
+                                    <outlet property="followerCountLabel" destination="Fjk-W9-YTp" id="ZEC-9C-rne"/>
+                                    <outlet property="followingCountLabel" destination="5On-6h-oa1" id="JqP-xw-4Qt"/>
+                                    <outlet property="postCountLabel" destination="tty-4b-mCI" id="15D-R6-9gD"/>
+                                    <outlet property="profileImageView" destination="cqA-s0-QkO" id="bY6-aQ-848"/>
+                                    <outlet property="usernameLabel" destination="gAW-eN-JLZ" id="hJX-An-Zw6"/>
                                 </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="AiL-xM-Yqn" firstAttribute="top" secondItem="c7X-7G-7QB" secondAttribute="top" id="9gB-BK-765"/>
-                            <constraint firstItem="AiL-xM-Yqn" firstAttribute="leading" secondItem="c7X-7G-7QB" secondAttribute="leading" id="G8y-da-khR"/>
-                            <constraint firstItem="c7X-7G-7QB" firstAttribute="bottom" secondItem="AiL-xM-Yqn" secondAttribute="bottom" id="Tf4-8R-GDO"/>
-                            <constraint firstItem="c7X-7G-7QB" firstAttribute="trailing" secondItem="AiL-xM-Yqn" secondAttribute="trailing" id="U9j-N2-uKb"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="c7X-7G-7QB"/>
                     </view>
                     <navigationItem key="navigationItem" id="EWQ-ts-iie">
@@ -95,6 +122,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="profileHeaderView" destination="vE3-qb-kVw" id="cTy-fV-EBy"/>
+                        <outlet property="selectionView" destination="21M-oF-47K" id="vOF-Bq-p8p"/>
+                        <outlet property="tableView" destination="AiL-xM-Yqn" id="bmG-04-Azw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="45m-IU-ni7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
